  - Fixed Keep Ammonia giving techs Israel already starts with
  - Fixed Move Tankers South removing random (and at the start non-existing) nuclear power plants
  - Fixed wrong tag in Israeli Green Blue deal
  - Fixed wrong scope in Israeli Netanyahu populist focuses
  - Fixed Israeli Travel to Brazil focus calling wrong event
  - Many miscellaneous Israel focus tree fixes

 Content:
  - Ecuador's starting leader Jamil Mahuad with the lawyer trait
  - Galicia, Silesia, Andalucia, Canary Islands, Basque, Bavaria and Greenland can now join the EU via Internal Enlargement
  - New game rules for countries : Estonia, Romania, Poland
  - Minor changes in the military tree of Greece
  - Added a new Internal Investment for Brazil that allows them to reduce the penalty of the Amazon Rainforest Conservation System in local states impacted by it
  - Removed restriction for the "Space Program" special project being limited to regional power and above
  - Added state modifier "Graveyard of Empires" for Afghanistan
  - Added new balance of power for Syrian Democratic path
  - Adjusted and improved various parts of the Syrian Focus tree
  - Added Conditional Peace Deals as a system for peace deals to prevent forever wars
  - Removed the outlook requirement from the "Assure Intellectual Freedoms" focus in the generic focus tree
  - Added a new Shanghai Cooperation Organization members list GUI
  - Expanded the list of SCO member countries
  - Re-added the J-10 series historical design for China, unlocked by decisions now
  - Added more options to the Economic Aid event granting more influence for more money and is now based on GDP over debt
  - simplyfied german oob
  - add visby-class as steath corvette
  - improve german navy focus tree
  - Added state highlights for Serbia's "Integrate Bosnia" decisions
  - Changed many timed, inconsequential Israeli focuses into permanent ones (usually tied to party)