@@ -362,6 +362,14 @@ ideas = {
 					build_cost_ic = -0.15
 					instant = yes
 				}
+				corvette = {
+					build_cost_ic = -0.15
+					instant = yes
+				}
+				frigate = {
+					build_cost_ic = -0.15
+					instant = yes
+				}
 			}
 		}
 
