@@ -191,9 +191,10 @@ ideas = {
 			picture = research_bonus
 
 			modifier = {
+				literacy_rate_education_modifier = 0.03
 				education_cost_multiplier_modifier = -0.15
 				research_speed_factor = 0.05
-				consumer_goods_factor = -0.02
+				consumer_goods_factor = -0.05
 			}
 		}
 
