@@ -66,3 +66,12 @@ receiving_investment_cost_modifier = {
 	precision = 2
 	category = country
 }
+
+# Education Modifier:
+# Purpose: Your education increased or decrease based on this modifier
+literacy_rate_education_modifier = {
+	color_type = good
+	value_type = percentage
+	precision = 2
+	category = country
+}
