@@ -13,6 +13,22 @@ focus_tree = {
 	continuous_focus_position = { x = 1500 y = 2000 }
 	shared_focus = AFRICAN_UNION_shared_focus
 
+	shortcut = {
+		name = NIG_religious_divide_shortcut
+		target = NIG_religious_divide
+		scroll_wheel_factor = 0.80
+	}
+	shortcut = {
+		name = NIG_federal_government_shortcut
+		target = NIG_federal_government_of_nigeria
+		scroll_wheel_factor = 0.80
+	}
+	shortcut = {
+		name = NIG_nigerian_armed_forces_shortcut
+		target = NIG_nigerian_armed_forces
+		scroll_wheel_factor = 0.80
+	}
+
 	# Religious Divide
 	focus = {
 		id = NIG_religious_divide
@@ -3216,7 +3232,7 @@ focus_tree = {
 
 		cost = 5
 
-		search_filters = { FOCUS_FILTER_POLITICAL }
+		search_filters = { FOCUS_FILTER_POLITICAL FOCUS_FILTER_STABILITY }
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_water_crisis"
@@ -3269,41 +3285,32 @@ focus_tree = {
 		y = 1
 		relative_position_id = NIG_bankers_of_africa
 
-		cost = 10
+		cost = 7.2
 
 		prerequisite = { focus = NIG_bankers_of_africa }
 		search_filters = { FOCUS_FILTER_INFLUENCE }
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_bankroll_africa"
-			random_country = {
+			every_other_country = {
 				limit = {
 					is_in_africa = yes
 					NOT = { has_war_with = NIG }
 					NOT = { has_country_flag = NIG_already_invested_in_flag }
+					NOT = { has_idea = Non_State_Actor }
 				}
-				country_event = { id = nigeria_md.8 days = 1 }
-			}
-			random_country = {
-				limit = {
-					is_in_africa = yes
-					NOT = { has_war_with = NIG }
-					NOT = { has_country_flag = NIG_already_invested_in_flag }
-				}
-				country_event = { id = nigeria_md.8 days = 3 }
-			}
-			random_country = {
-				limit = {
-					is_in_africa = yes
-					NOT = { has_war_with = NIG }
-					NOT = { has_country_flag = NIG_already_invested_in_flag }
-				}
-				country_event = { id = nigeria_md.8 days = 7 }
+				random_select_amount = 3
+
+ 				country_event = { id = nigeria_md.8 days = 1 }
 			}
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 10
+				has_at_least_regional_power_status = yes
+			}
 		}
 	}
 
@@ -3446,10 +3453,80 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_nigerian_agricultural_belt"
-			set_temp_variable = { temp_opinion = 7 }
+			set_temp_variable = { temp_opinion = 10 }
 			change_oligarchs_opinion = yes
 			change_farmers_opinion = yes
 			change_landowners_opinion = yes
+			effect_tooltip = {
+				custom_effect_tooltip = if_oligarchs_opinion_at_least_positive_tt
+				random_owned_controlled_state = {
+					limit = {
+						free_building_slots = {
+							building = agriculture_district
+							size > 0
+							include_locked = yes
+						}
+						OR = {
+							is_in_home_area = yes
+							NOT = {
+								owner = {
+									any_owned_state = {
+										free_building_slots = {
+											building = agriculture_district
+											size > 0
+											include_locked = yes
+										}
+										is_in_home_area = yes
+									}
+								}
+							}
+						}
+					}
+					add_extra_state_shared_building_slots = 1
+					add_building_construction = {
+						type = agriculture_district
+						level = 1
+						instant_build = yes
+					}
+				}
+			}
+			hidden_effect = {
+				if = {
+					limit = {
+						check_variable = { oligarchs_opinion > 49 }
+					}
+					random_owned_controlled_state = {
+						limit = {
+							free_building_slots = {
+								building = agriculture_district
+								size > 0
+								include_locked = yes
+							}
+							OR = {
+								is_in_home_area = yes
+								NOT = {
+									owner = {
+										any_owned_state = {
+											free_building_slots = {
+												building = agriculture_district
+												size > 0
+												include_locked = yes
+											}
+											is_in_home_area = yes
+										}
+									}
+								}
+							}
+						}
+						add_extra_state_shared_building_slots = 1
+						add_building_construction = {
+							type = agriculture_district
+							level = 1
+							instant_build = yes
+						}
+					}
+				}
+			}
 		}
 
 		ai_will_do = {
@@ -3492,46 +3569,34 @@ focus_tree = {
 		y = 2
 		relative_position_id = NIG_bankers_of_africa
 
-		cost = 10
+		cost = 7.2
 
 		prerequisite = { focus = NIG_bankroll_africa }
 		prerequisite = { focus = NIG_efficent_government_spending }
 
 		search_filters = { FOCUS_FILTER_INFLUENCE }
-		ai_will_do = {
-			base = 1
-		}
+
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_african_investments"
-			random_country = {
+			every_other_country = {
 				limit = {
 					is_in_africa = yes
 					NOT = { has_war_with = NIG }
 					NOT = { has_country_flag = NIG_already_invested_in_flag }
+					NOT = { has_idea = Non_State_Actor }
 					NOT = { is_neighbor_of = NIG }
-					NOT = { tag = NIG }
 				}
-				country_event = { id = nigeria_md.8 days = 1 }
+				random_select_amount = 3
+
+ 				country_event = { id = nigeria_md.8 days = 1 }
 			}
-			random_country = {
-				limit = {
-					is_in_africa = yes
-					NOT = { has_war_with = NIG }
-					NOT = { has_country_flag = NIG_already_invested_in_flag }
-					NOT = { is_neighbor_of = NIG }
-					NOT = { tag = NIG }
-				}
-				country_event = { id = nigeria_md.8 days = 3 }
-			}
-			random_country = {
-				limit = {
-					is_in_africa = yes
-					NOT = { has_war_with = NIG }
-					NOT = { has_country_flag = NIG_already_invested_in_flag }
-					NOT = { is_neighbor_of = NIG }
-					NOT = { tag = NIG }
-				}
-				country_event = { id = nigeria_md.8 days = 7 }
+		}
+
+		ai_will_do = {
+			base = 1
+			modifier = {
+				add = 10
+				has_at_least_regional_power_status = yes
 			}
 		}
 	}
@@ -3549,11 +3614,16 @@ focus_tree = {
 		prerequisite = { focus = NIG_lagos_financial_centre }
 		search_filters = { FOCUS_FILTER_INDUSTRY }
 
+		available = {
+			has_full_control_of_state = 337
+			owns_state = 337
+		}
+
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_abuja_road_projects"
 			set_temp_variable = { treasury_change = -7 }
 			modify_treasury_effect = yes
-			337 = { #Abuja Infrastructure
+			337 = {
 				add_building_construction = {
 					type = infrastructure
 					level = 2
@@ -3783,40 +3853,57 @@ focus_tree = {
 		prerequisite = { focus = NIG_northern_factories }
 
 		search_filters = { FOCUS_FILTER_RESOURCE }
+
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_nigerian_oil"
-			# TODO: Finish this out so it's better written for the conditional
 			effect_tooltip = {
+				add_resource = {
+					type = oil
+					amount = 15
+					state = 332
+				}
+				set_temp_variable = { treasury_change = -5 }
+				modify_treasury_effect = yes
+
 				custom_effect_tooltip = NIG_controls_ambazonia_tt
 				add_resource = {
 					type = oil
 					amount = 15
 					state = 322
 				}
+				set_temp_variable = { treasury_change = -5 }
+				modify_treasury_effect = yes
+				newline = yes
+			}
+			hidden_effect = {
+				set_temp_variable = { treasury_change = 0 }
+				if = {
+					limit = {
+						owns_state = 322
+						has_full_control_of_state = 322
+					}
+					add_resource = {	# Ambazonia
+						type = oil
+						amount = 15
+						state = 322
+					}
+					add_to_temp_variable = { treasury_change = -5 }
+				}
+				if = {
+					limit = {
+						owns_state = 332
+						has_full_control_of_state = 332
+					}
+					add_resource = {
+						type = oil
+						amount = 15
+						state = 332
+					}
+					add_to_temp_variable = { treasury_change = -5 }
+				}
+				modify_treasury_effect = yes
 			}
 
-			set_temp_variable = { treasury_change = 0 }
-			if = { limit = { owns_state = 322 }
-				add_resource = {	# Ambazonia
-					type = oil
-					amount = 15
-					state = 322
-				}
-				add_to_temp_variable = { treasury_change = -5 }
-			}
-			else = {
-				custom_effect_tooltip = NIG_nigerian_oil_focus_tt
-			}
-
-			if = { limit = { owns_state = 332 }
-				add_resource = {
-					type = oil
-					amount = 15
-					state = 332
-				}
-				add_to_temp_variable = { treasury_change = -5 }
-			}
-			modify_treasury_effect = yes
 			swap_ideas = {
 				remove_idea = NIG_blood_oil_idea
 				add_idea = NIG_blood_oil_idea_2
@@ -3825,6 +3912,10 @@ focus_tree = {
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 10
+				check_variable = { resource_imported@oil > 0 }
+			}
 		}
 	}
 
@@ -3862,7 +3953,7 @@ focus_tree = {
 		y = 4
 		relative_position_id = NIG_bankers_of_africa
 
-		cost = 10
+		cost = 7.2
 
 		prerequisite = { focus = NIG_african_investments }
 		prerequisite = { focus = NIG_spur_regional_development }
@@ -3871,30 +3962,26 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [This.GetName]: focus NIG_neighborly_expansion"
-			random_country = {
+			every_other_country = {
 				limit = {
 					is_in_africa = yes
 					NOT = { has_war_with = NIG }
 					NOT = { has_country_flag = NIG_already_invested_in_flag }
+					NOT = { has_idea = Non_State_Actor }
 					is_neighbor_of = NIG
-					NOT = { tag = NIG }
 				}
-				country_event = { id = nigeria_md.8 days = 1 }
-			}
-			random_country = {
-				limit = {
-					is_in_africa = yes
-					NOT = { has_war_with = NIG }
-					NOT = { has_country_flag = NIG_already_invested_in_flag }
-					is_neighbor_of = NIG
-					NOT = { tag = NIG }
-				}
-				country_event = { id = nigeria_md.8 days = 3 }
+				random_select_amount = 2
+
+ 				country_event = { id = nigeria_md.8 days = 1 }
 			}
 		}
 
 		ai_will_do = {
 			base = 1
+			modifier = {
+				add = 10
+				has_at_least_regional_power_status = yes
+			}
 		}
 	}
 
@@ -3972,6 +4059,7 @@ focus_tree = {
 			add_political_power = 100
 			set_temp_variable = { temp_opinion = 10 }
 			change_oligarchs_opinion = yes
+			change_farmers_opinion = yes
 		}
 
 		ai_will_do = {
@@ -4530,7 +4618,7 @@ focus_tree = {
 				limit = { has_full_control_of_state = 337 }
 				add_resource = {
 					type = steel
-					amount = 4
+					amount = 8
 					state = 337
 				}
 			}
@@ -4538,7 +4626,7 @@ focus_tree = {
 				limit = { has_full_control_of_state = 336 }
 				add_resource = {
 					type = steel
-					amount = 2
+					amount = 8
 					state = 336
 				}
 			}
@@ -4546,11 +4634,10 @@ focus_tree = {
 				limit = { has_full_control_of_state = 332 }
 				add_resource = {
 					type = tungsten
-					amount = 4
+					amount = 8
 					state = 332
 				}
 			}
-			add_stability = -0.015
 			set_temp_variable = { treasury_change = -5 }
 			modify_treasury_effect = yes
 		}
