@@ -895,7 +895,7 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ENG_focus_on_the_navy"
-			navy_experience = 20
+			navy_experience = 50
 		}
 
 		ai_will_do = {
@@ -1286,7 +1286,7 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ENG_naval_prototypes"
-			navy_experience = 15
+			navy_experience = 20
 		}
 
 		ai_will_do = {
@@ -2757,11 +2757,12 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ENG_naval_doctrine_1"
+			navy_experience = 50
 			add_doctrine_cost_reduction = {
 				name = ENG_naval_doctrine_1
 				category = CAT_naval_doctrine
 				uses = 1
-				cost_reduction = 0.2
+				cost_reduction = 0.25
 			}
 		}
 
@@ -3851,12 +3852,12 @@ focus_tree = {
 
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus ENG_naval_doctrine_2"
-			air_experience = 10
+			navy_experience = 50
 			add_doctrine_cost_reduction = {
 				name = ENG_naval_doctrine_2
 				category = CAT_naval_doctrine
 				uses = 1
-				cost_reduction = 0.2
+				cost_reduction = 0.25
 			}
 		}
 
@@ -4308,6 +4309,7 @@ focus_tree = {
 			add_ideas = ENG_small_ship_project
 			set_temp_variable = { temp_opinion = 5 }
 			change_maritime_industry_opinion = yes
+			change_defense_industry_opinion = yes
 		}
 
 		ai_will_do = {
