@@ -241,6 +241,9 @@ calculate_energy_use = {
 	else = {
 		set_variable = { nuclear_fuel_consumption = 0 }
 		set_variable = { nuclear_energy_generation = 0 }
+
+		# Set only to production when nuclear power is disabled
+		set_variable = { net_nuclear_fuel_display = nuclear_reactor_fuel_production }
 	}
 
 	# Flat Miscellaneous Gain from Content
