@@ -279,61 +279,15 @@ EDU_update_education_idea_DYNMOD = {
 }
 
 EDU_check_education_spending = {
-	if = {
-		limit = {
-			has_idea = edu_01
-		}
-		randomize_temp_variable = {
-			var = LR_change
-			distribution = uniform
-			min = -0.05
-			max = 0
-		}
+	set_temp_variable = { LR_change_maximum = modifier@literacy_rate_education_modifier }
+
+	randomize_temp_variable = {
+		var = LR_change
+		distribution = uniform
+		min = -0.05
+		max = LR_change_maximum
 	}
-	else_if = {
-		limit = {
-			has_idea = edu_02
-		}
-		randomize_temp_variable = {
-			var = LR_change
-			distribution = uniform
-			min = -0.025
-			max = 0.025
-		}
-	}
-	else_if = {
-		limit = {
-			has_idea = edu_03
-		}
-		randomize_temp_variable = {
-			var = LR_change
-			distribution = uniform
-			min = 0
-			max = 0.05
-		}
-	}
-	else_if = {
-		limit = {
-			has_idea = edu_04
-		}
-		randomize_temp_variable = {
-			var = LR_change
-			distribution = uniform
-			min = 0.025
-			max = 0.075
-		}
-	}
-	else_if = {
-		limit = {
-			has_idea = edu_05
-		}
-		randomize_temp_variable = {
-			var = LR_change
-			distribution = uniform
-			min = 0.05
-			max = 0.10
-		}
-	}
+
 	add_to_variable = { literacy_change_stored = LR_change }
 }
 
