@@ -72,6 +72,12 @@ non_indifferent_oligarchs = {
 	check_variable = { oligarchs_opinion > 61 }
 	check_variable = { oligarchs_opinion < 39 }
 }
+oligarchs_at_least_enthusiastic_opinion = {
+	custom_trigger_tooltip = {
+		tooltip = oli_at_least_enthusiastic_tt
+		check_variable = { oligarchs_opinion > 74 }
+	}
+}
 oligarchs_at_least_positive_opinion = {
 	custom_trigger_tooltip = {
 		tooltip = oli_at_least_positive_tt
