@@ -50,7 +50,7 @@ country_event = {
 			effect_tooltip = {
 				custom_effect_tooltip = accept_money
 				set_temp_variable = { percent_change = 2 }
-				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { tag_index = PREV.id }
 				set_temp_variable = { influence_target = THIS.id }
 				change_influence_percentage = yes
 				reverse_add_opinion_modifier = { target = FROM modifier = given_gift }
@@ -96,7 +96,7 @@ country_event = {
 			effect_tooltip = {
 				custom_effect_tooltip = accept_money
 				set_temp_variable = { percent_change = 4 }
-				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { tag_index = PREV.id }
 				set_temp_variable = { influence_target = THIS.id }
 				change_influence_percentage = yes
 				reverse_add_opinion_modifier = { target = FROM modifier = given_gift_ten }
@@ -120,7 +120,7 @@ country_event = {
 			effect_tooltip = {
 				custom_effect_tooltip = accept_money
 				set_temp_variable = { percent_change = 6 }
-				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { tag_index = PREV.id }
 				set_temp_variable = { influence_target = THIS.id }
 				change_influence_percentage = yes
 				reverse_add_opinion_modifier = { target = FROM modifier = given_gift_fifteen }
@@ -178,7 +178,7 @@ country_event = {
 
 			custom_effect_tooltip = accept_money
 			set_temp_variable = { percent_change = 2 }
-			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { tag_index = FROM.id }
 			set_temp_variable = { influence_target = THIS.id }
 			change_influence_percentage = yes
 			add_opinion_modifier = { target = FROM modifier = given_gift }
@@ -192,7 +192,7 @@ country_event = {
 
 			custom_effect_tooltip = accept_money
 			set_temp_variable = { percent_change = 4 }
-			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { tag_index = FROM.id }
 			set_temp_variable = { influence_target = THIS.id }
 			change_influence_percentage = yes
 			add_opinion_modifier = { target = FROM modifier = given_gift_ten }
@@ -207,7 +207,7 @@ country_event = {
 
 			custom_effect_tooltip = accept_money
 			set_temp_variable = { percent_change = 6 }
-			set_temp_variable = { tag_index = ROOT.id }
+			set_temp_variable = { tag_index = FROM.id }
 			set_temp_variable = { influence_target = THIS.id }
 			change_influence_percentage = yes
 			add_opinion_modifier = { target = FROM modifier = given_gift_fifteen }
@@ -221,7 +221,7 @@ country_event = {
 		FROM = { country_event = { id = diplomatic_response.1 } }
 		# AI Section
 		ai_chance = {
-			factor = 5 # Weighted to prefer it
+			base = 5 # Weighted to prefer it
 			# Higher Likelihood if in the same organization
 			modifier = {
 				factor = 1.25
@@ -259,6 +259,10 @@ country_event = {
 					check_variable = { interest_rate < 4.00 }
 					check_variable = { debt_ratio < 0.50 }
 				}
+			}
+			modifier = {
+				add = 10000
+				always = yes
 			}
 		}
 	}
@@ -306,7 +310,7 @@ country_event = {
 			country_event = { id = diplomatic_response.2 }
 		}
 		ai_chance = {
-			factor = 1
+			base = 1
 			# If they have lower domestic influence trigger fight or flight
 			modifier = {
 				set_temp_variable = { domestic_influence_amount_tmp = domestic_influence_amount }
