@@ -126,7 +126,7 @@
  TOTAL_HOURLY_POPULATION_FUEL_CONSUMPTION_VALUES_TT: "This value represents the total amount of fuel consumed daily by all of our §YPopulation§!.\n\n§YModifiers§!:\nLaw, Ideas, and Techs impact on §YNon-Electric Fuel§! Consumption: [?modifier@non_electric_fuel_consumption_modifier|-%]"
  TOTAL_ENERGY_MISC_VALUE_HEADER: "Fuel Consumption"
  TOTAL_WEEKLY_NUCLEAR_MATERIAL_PRODUCTION: "Weekly §YNuclear Fuel§! Net §GProduction§!: [?net_nuclear_fuel_display|0+] Kg"
- TOTAL_WEEKLY_NUCLEAR_MATERIAL_PRODUCTION_TT: "This value represents the weekly consumption of §YReactor-Grade Material§! for our §YNuclear Reactors§!.\n\n§YStockpile of Reactor-Grade Material§!: £GFX_nuclear_material_texticon  §G[?var_reactor_material_stockpile]§! Kg\n§YWeekly Production of Reactor-Grade Material§!: [?nuclear_reactor_fuel_production|G2] Kg\n§YWeekly Consumption of Reactor-Grade Material§!: [?nuclear_fuel_consumption|-2] Kg\n\n§YModifiers§!:\nLaw, Ideas, and Techs impact on §YNuclear Reactor Fuel§! Consumption: [?modifier@nuclear_fuel_consumption_modifier|-%]"
+ TOTAL_WEEKLY_NUCLEAR_MATERIAL_PRODUCTION_TT: "This value represents the weekly consumption of §YReactor-Grade Material§! for our §YNuclear Reactors§!. The value is the difference between the weekly production and consumption of §YReactor-Grade Material§!.\n\n§YStockpile of Reactor-Grade Material§!: £GFX_nuclear_material_texticon  §G[?var_reactor_material_stockpile]§! Kg\n§YWeekly Production of Reactor-Grade Material§!: [?nuclear_reactor_fuel_production|G2] Kg\n§YWeekly Consumption of Reactor-Grade Material§!: [?nuclear_fuel_consumption|-2] Kg\n\n§YModifiers§!:\nLaw, Ideas, and Techs impact on §YNuclear Reactor Fuel§! Consumption: [?modifier@nuclear_fuel_consumption_modifier|-%]"
  TOTAL_STORED_ENERGY: "Stored Energy: [?stored_energy|3Y] GWh of [?max_stored_energy|3Y] GWh Max Storage"
  TOTAL_STORED_ENERGY_TT: "This shows the current amount of excess energy we have stored, in addition to the maximum we can hold. We can gain more §YMax Storage§! by constructing additional §YBattery Parks§!."
  OPEN_ENERGY_BUTTON: "Open Energy Screen"
