@@ -337,7 +337,7 @@
  NIG_cores_equatorial_guinea_cameroon_central_tt: "Cores the states of §Y[EGU.GetNameWithFlag]§!, §Y[CAM.GetNameWithFlag]§!, and §Y[CAR.GetNameWithFlag]§!.\n"
  NIG_cores_benin_togo_states_tt: "Cores the states of §Y[BEN.GetNameWithFlag]§! and §Y[TOG.GetNameWithFlag]§!.\n"
  NIG_cores_niger_states_tt: "Cores the states of §Y[NGR.GetNameWithFlag]§!"
- NIG_controls_ambazonia_tt: "If we control §Y[322.GetName]§!:\n"
+ NIG_controls_ambazonia_tt: "\nIf we control §Y[322.GetName]§!:\n"
 
  # Ideas
  NIG_christian_majority_10_idea: "Christian Majority - 10"
