@@ -91,6 +91,9 @@
 
  oli_at_least_positive_tt: "§Y$oligarchs$§! opinion at least 51 (Current: [OLI_opinion_display])"
  oli_not_positive_tt: "§Y$oligarchs$§! opinion below 50 (Current: [OLI_opinion_display])"
+ oli_at_least_enthusiastic_tt: "§Y$oligarchs$§! opinion at least 75 (Current: [OLI_opinion_display])"
+
+ if_oligarchs_opinion_at_least_positive_tt: "\nIf §Y$oligarchs$§! opinion is at least 50 (Current: [OLI_opinion_display]):\n"
 
  # Militaristic Factions
  # Military-Industrial Complex
