@@ -156,7 +156,7 @@
  modifier_production_speed_coastal_bunker_factor_desc: "Modifies the speed of $coastal_bunker$ construction."
  modifier_production_speed_nuclear_reactor_factor: "£construction_speed_texticon  §Y$nuclear_reactor$§! construction speed"
  modifier_production_speed_nuclear_reactor_factor_desc: "Modifies the speed of $nuclear_reactor$ construction."
- 
+
  communism_drift: "£emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support"
  democratic_drift: "£western_outlook_campaign_cost_modifier_texticon Daily Pro-Western Support"
  fascism_drift: "£salafist_outlook_campaign_cost_modifier_texticon Daily Salafist Support"
@@ -295,6 +295,7 @@
  expected_police_modifier: "§YExpected Police Spending§!"
  expected_adm_modifier: "§YExpected Administrative Spending§!"
  expected_mil_modifier: "§YExpected Military Spending§!"
+ literacy_rate_education_modifier: "§YLiteracy Rate Maximum§! Rate Modifier"
 
  buildings_worker_requirement_modifier: "All Buildings Worker Requirements"
  # Custom Ship Class Max Tonnage
