@@ -86,6 +86,7 @@ v1.11.3
   - Fixed wrong scope in Israeli Netanyahu populist focuses
   - Fixed Israeli Travel to Brazil focus calling wrong event
   - Many miscellaneous Israel focus tree fixes
+  - Fixed the net nuclear fuel display showing there is consumption when nuclear power is disabled
 
  Content:
   - Ecuador's starting leader Jamil Mahuad with the lawyer trait
@@ -111,6 +112,8 @@ v1.11.3
   - Reworked Israel events so that relations as well as Israeli influence in the target country matter
   - Improved Restoring Yamit - allows to transfer Sinai if Egypt is subject of Israel
   - Bulgaria: Focus trees of the Army, Diplomacy, and Economics have been reworked
+  - The United Kingdom "Improve our Small Ships" focus now also reduces the costs of corvettes and frigates
+  - The United Kingdom naval focuses now gives additional naval experience to the country
 
  Database:
   - Adjusted Ecuador's starting election cycle from 7 years to 4 years
